[package]
name = "hello-gp"
edition = "2024"
publish = false
version = "0.2.0"

[dependencies]
anyhow = "1"
gpui = "0.2"
gpui-component = { path= "/mnt/hitachi/Study/Rust/gpui-component/crates/ui", version="0.2", features = ["webview", "tree-sitter-languages"] }
reqwest_client = { path = "./reqwest_client" }

chrono = "0.4"
fake = { version = "^4.4", features = ["dummy"] }
rand = "0.8"
raw-window-handle = { version = "0.6", features = ["std"] }
regex = "1"
rust-embed = { version = "8.7", features = ["interpolate-folder-path"] }
serde = "1"
serde_json = "1"
unindent = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.14"
directories = "^6.0"
lazy_static = "^1.5"
autocorrect = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
