[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
version = "0.3.0-preview"
publish = false
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.12.15-zed", package = "zed-reqwest"  }
http-client = { version = "0.2", package = "gpui_http_client"  }
anyhow = "1"
log = "0.4"
rustls = "0.23"
rustls-platform-verifier = "0.5.0"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1"

reqwest_client = { path = "crates/reqwest_client" }