[package]
name = "reqwest_client"
version = "0.2.0"
publish = false
license = "Apache-2.0"
edition = "2024"

[lib]
path = "src/reqwest_client.rs"
doctest = true

[dependencies]
reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
http-client = { version = "0.2.0", package = "zed-http-client" }
anyhow = "1"
log = "0.4"
rustls = "0.23"
rustls-platform-verifier = "0.5.0"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1.5"
