[package]
name = "hello-gp"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
gpui = "0.2"
gpui-component = { version = "0.3", features = ["webview", "tree-sitter-languages"] }
reqwest_client = { workspace = true }
chrono = "0.4"
fake = { version = "^4.4", features = ["dummy"] }
rand = "0.8"
raw-window-handle = { version = "0.6", features = ["std"] }
regex = { workspace = true }
rust-embed = { version = "8.7", features = ["interpolate-folder-path"] }
serde = "1"
serde_json = "1"
unindent = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools = "0.14"
directories = "^6.0"
lazy_static = "^1.5"
autocorrect = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }
