[package]
name = "reqwest_client"
version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
path = "src/reqwest_client.rs"
doctest = true

[dependencies]
reqwest = { workspace = true}
http-client = { workspace = true}
anyhow = { workspace = true }
log = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
regex = { workspace = true }
